NILE-144:Fixed CERN toolbar and topbar component to a fixed position to avoid overlapping of components. Fixes #1

--- a/src/app/theme/elements/page-top/page-top.component.scss
+++ b/src/app/theme/elements/page-top/page-top.component.scss
@@ -9,6 +9,7 @@
   height: $pagetop-height;
   width: 100%;
   min-width: $resMin;
+  margin-top: $cerntoolbar-height;
   padding: 0 32px 0 40px;
 
   .dropdown-toggle::after {
