--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -61,7 +61,7 @@ a {
 
 .al-main {
   margin-left: $left-space;
-  padding: 66px 0 34px 0;
+  padding: $sidebar-top-height 0 34px 0;
   min-height: 500px;
   position: relative;
 }
